--- a/mean-app/package.json
+++ b/mean-app/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
     "mongoose": "^5.9.4",
+    "multer": "^1.4.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
